# OpenCastor

./: .coverage  .env.example  .gitignore  .opencastor-commitments.jsonl  CHANGELOG.md  CLAUDE.md  Dockerfile.arm  README.md  SECURITY.md  docker-compose.arm.yml  package.json  pyproject.toml  requirements.txt  wrangler.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: generate_sbom.py  validate_rcan.py
.github/workflows/: auto-label.yml  ci.yml  create_backlog_issues.yml  demo-pages.yml  deploy-pages.yml  forbidden-phrase-lint.yml  release-drift.yml  release.yml  stale.yml  validate_rcan.yml
.streamlit/: config.toml
brand/: USAGE.md  generate_assets.py
castor/: __init__.py  action_validator.py  agent_tools.py  api.py  apikeys.py  audit.py  auth.py  avoidance.py  behaviors.py  benchmarker.py  camera.py  claude_proxy.py  cli.py  client.py  command_interpreter.py  compliance.py  components.py  confidence_gate.py  config_history.py  config_validation.py  configure.py  conformance.py  connectivity.py  context.py  daemon.py  dashboard.py  dashboard_memory_timeline.py  dashboard_tui.py  delegation.py  detection.py  doctor.py  dual_model.py  embedding_interpreter.py  episode_search.py  eu_register.py  finetune.py  firmware.py  fria.py  gestures.py  hardware_detect.py  (+56 more)
castor/agents/: communicator.py  navigator.py  observer.py  orchestrator.py  shared_state.py
castor/auth/: __init__.py  provider_auth.py
castor/brain/: __init__.py  autodream.py  autodream_issues.py  autodream_runner.py  compaction.py  memory_schema.py  robot_context.py
castor/channels/: __init__.py  base.py  discord_channel.py  homeassistant_channel.py  matrix_channel.py  mqtt_channel.py  rcan_mqtt_transport.py  signal_channel.py  slack_channel.py  teams_channel.py  telegram_channel.py  whatsapp_neonize.py  whatsapp_twilio.py
castor/cloud/: __init__.py  bridge.py  consent_manager.py  firestore_models.py
castor/commands/: benchmark.py  compete.py  deploy.py  hub.py  leaderboard.py  recommend.py  research.py  season.py
castor/competitions/: bracket_season.py  models.py
castor/contribute/: coordinator.py  harness_eval.py
castor/crypto/: __init__.py  pqc.py
castor/drivers/: __init__.py  acb_driver.py  arduino_driver.py  base.py  battery_driver.py  can_transport.py  dynamixel.py  esp32_ble_driver.py  feetech_driver.py  gpio_driver.py  imu_driver.py  lidar_driver.py  odrive_driver.py  pca9685.py  reachy_driver.py  simulation_driver.py  stepper_driver.py  thermal_driver.py
castor/fs/: __init__.py  context.py  proc.py  safety.py
castor/harness/: __init__.py  circuit_breaker.py  context_compressor.py  core.py  cost_meter.py  default_harness.yaml  dlq.py  memory.py  pattern.py  prompt_guard.py  rollback.py  security.py  span_tracer.py  working_memory.py
castor/hooks/: __init__.py  default_hooks.py  runner.py
castor/inference/: streaming.py
castor/learner/: episode_store.py
castor/memory/: __init__.py  consolidator.py  episode.py  episodic.py  replay.py
castor/orchestration/: thread_context.py
castor/profiles/: __init__.py
castor/providers/: __init__.py  anthropic_provider.py  apple_provider.py  base.py  clap_embedding_provider.py  clip_embedding_provider.py  consensus_provider.py  deepseek_provider.py  embedding_backend.py  gated.py  gemini_embedding_provider.py  google_provider.py  grok_provider.py  groq_provider.py  huggingface_provider.py  imagebind_provider.py  llamacpp_provider.py  mistral_provider.py  mlx_provider.py  ollama_provider.py  onnx_provider.py  openrouter_provider.py  pool_provider.py  sentence_transformers_provider.py  taalas_provider.py  task_router.py  vertex_provider.py  vla_provider.py
castor/rcan/: __init__.py  commitment_chain.py  config_safety.py  invoke.py  jwt_auth.py  key_rotation.py  mdns.py  message.py  message_signing.py  node_broadcaster.py  node_resolver.py  rbac.py  registry.py  router.py  sdk_bridge.py  sdk_compat.py  telemetry_fields.py  verification.py
castor/rcan3/: __init__.py  compliance.py  identity.py  rrf_client.py  signer.py
castor/safety/: authorization.py  bounds.py  monitor.py  p66_manifest.py  protocol.py
castor/skills/: __init__.py  rcan_skills.py
castor/specialists/: task_planner.py
config/: arm.rcan.yaml  rcan.schema.json  swarm.yaml  swarm.yaml.example
demo/: index.html  package-lock.json  package.json  vite.config.ts
docs/: agent-bootstrap.md  cert-enforcement-architecture.md  embedding-interpreter.md  hardware-guide.md  monitoring.md  open-core-extraction-plan.md  pqc-migration.md  rcan-integration.md  recipes-cli.md  robot-md-claude-code.md
examples/: bob-reference.rcan.yaml
firmware/: arduino_l298n_bridge.ino
research/: README.md  champion.yaml  index.json
scripts/: autodream.sh  gamepad_driver.py  install.sh  swarm_sync_episodes.py  sync_setup_docs.py
site/: _redirects  about.html  beginners.html  changelog.html  docs.html  hardware.html  hub.html  index.html  styles.css  tutorials.html
tests/: conftest.py  test_acb_driver.py  test_accountability.py  test_action_validator.py  test_action_validator_rcan.py  test_api_endpoints.py  test_apikeys.py  test_apple_preflight.py  test_apple_provider.py  test_arduino_driver.py  test_audit.py  test_auth_jwt.py  test_authority.py  test_autodream.py  test_autodream_issues.py  test_avoidance.py  test_backup.py  test_battery_cycles.py  test_battery_driver.py  test_battery_history.py  test_behavior_assert.py  test_behavior_break_on.py  test_behavior_chain.py  test_behavior_conditional.py  test_behavior_countdown.py  test_behavior_emit_event.py  test_behavior_event_trigger.py  test_behavior_event_wait.py  test_behavior_for_each.py  test_behavior_foreach_file.py  test_behavior_log_step.py  test_behavior_parallel.py  test_behavior_parallel_race.py  test_behavior_retry.py  test_behavior_schedule.py  test_behavior_set_var_get_var.py  test_behavior_tag_filter.py  test_behavior_unless.py  test_behavior_wait_for_event.py  test_behavior_while_true.py  (+289 more)
website/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
(+191 files in other folders)
