[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencastor"
version = "2026.2.22.5"
description = "The Universal Runtime for Embodied AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "OpenCastor Contributors", email = "hello@opencastor.com" },
]
keywords = ["robotics", "ai", "llm", "embodied-ai", "rcan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]

dependencies = [
    # The Brain (AI Providers)
    "anthropic>=0.40.0",
    "google-generativeai>=0.4.0",
    "openai>=1.0.0",
    # The Body (Hardware)
    "pyserial>=3.5",
    # The Eyes (Vision)
    "opencv-python-headless>=4.9.0",
    # The Voice (TTS via USB speaker)
    "gTTS>=2.4.0",
    "pygame>=2.5.0",
    # The Law (Config & Validation)
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "requests>=2.31.0",
    # The Gateway (API & Channels)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.7",
    # The Hub (Model Discovery & Inference)
    "huggingface-hub>=0.25.0",
    # The Dashboard
    "streamlit>=1.30.0",
    "SpeechRecognition>=3.10.0",
    # Auth
    "PyJWT>=2.8.0",
    # CLI & Demo
    "rich>=13.0.0",
    "argcomplete>=3.0.0",
]

[project.optional-dependencies]
# The recommended stack: RPi + PCA9685 RC car + CSI camera + WhatsApp + Claude
core = []
rpi = [
    "adafruit-circuitpython-pca9685>=3.4.0; sys_platform == 'linux'",
    "adafruit-circuitpython-motor>=3.4.0; sys_platform == 'linux'",
    "picamera2>=0.3.17; sys_platform == 'linux'",
    "neonize>=0.3.10",
]
whatsapp = ["neonize>=0.3.10"]
whatsapp-twilio = ["twilio>=9.0.0"]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3.0"]
slack = ["slack-bolt>=1.18.0"]
mqtt = ["paho-mqtt>=2.0.0"]
channels = [
    "neonize>=0.3.10",
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.0",
    "slack-bolt>=1.18.0",
    "paho-mqtt>=2.0.0",
]
rcan = [
    "zeroconf>=0.131.0",
]
dynamixel = ["dynamixel-sdk>=3.7.31"]
vertex = ["google-genai>=1.0.0"]
homeassistant = ["aiohttp>=3.9.0"]
webrtc = ["aiortc>=1.6.0", "av>=11.0.0"]
ros2 = []  # rclpy is installed via ROS2 distro, not pip
onnx = ["onnxruntime>=1.17.0"]
onnx-gpu = ["onnxruntime-gpu>=1.17.0"]
gestures = ["mediapipe>=0.10.0"]
simulation = []  # Gazebo uses ROS2/rclpy; Webots via REST — no extra pip deps
all = [
    "opencastor[rpi,whatsapp,telegram,discord,slack,rcan,dynamixel,vertex,homeassistant,webrtc,onnx,gestures,dev]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "qrcode>=7.4.0",
]

[project.scripts]
castor = "castor.cli:_friendly_error_handler"
opencastor = "castor.cli:_friendly_error_handler"

[project.urls]
Homepage = "https://opencastor.com"
Repository = "https://github.com/craigm26/OpenCastor"
Documentation = "https://github.com/craigm26/OpenCastor#readme"
"Bug Tracker" = "https://github.com/craigm26/OpenCastor/issues"
"Changelog" = "https://github.com/craigm26/OpenCastor/blob/main/CHANGELOG.md"
"Discord" = "https://discord.gg/jMjA8B26Bq"

[tool.setuptools.packages.find]
include = ["castor*"]

[tool.setuptools.package-data]
castor = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (used by FastAPI Depends)
    "UP006",  # use dict instead of Dict (prefer explicit imports for clarity)
    "UP007",  # use X | Y for union types (need 3.10 compat)
    "UP035",  # deprecated typing imports (keep for 3.10 compat)
    "UP045",  # use X | None (keep Optional for 3.10 compat)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
