[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencastor"
version = "3.0.2"
description = "The Universal Runtime for Embodied AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "OpenCastor Contributors", email = "hello@opencastor.com" },
]
keywords = ["robotics", "ai", "llm", "embodied-ai", "rcan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]

dependencies = [
    # The Brain (AI Providers)
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    # The Body (Hardware)
    "pyserial>=3.5",
    # The Eyes (Vision)
    "opencv-python-headless>=4.9.0",
    # The Voice (TTS via USB speaker)
    "gTTS>=2.4.0",
    "pygame>=2.5.0",
    # The Law (Config & Validation)
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "requests>=2.31.0",
    # The Gateway (API & Channels)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.7",
    # Post-Quantum Cryptography
    "cryptography>=42.0.0",
    "dilithium-py>=1.0.0",
    # The Hub (Model Discovery & Inference)
    "huggingface-hub>=0.25.0",
    # The Dashboard
    "streamlit>=1.30.0",
    "SpeechRecognition>=3.10.0",
    # Auth
    "PyJWT>=2.8.0",
    # CLI & Demo
    "rich>=13.0.0",
    "argcomplete>=3.0.0",
    # RCAN Python SDK — official protocol implementation
    "rcan>=3.3,<4",
]

[project.optional-dependencies]
# The recommended stack: RPi + PCA9685 RC car + CSI camera + WhatsApp + Claude
core = []
rpi = [
    "adafruit-circuitpython-pca9685>=3.4.0; sys_platform == 'linux'",
    "adafruit-circuitpython-motor>=3.4.0; sys_platform == 'linux'",
    "neonize==0.3.16.post0",
    "picamera2>=0.3; sys_platform == 'linux'",
]
elevenlabs = ["elevenlabs>=1.0"]
sdk = ["httpx>=0.27"]
whatsapp = ["neonize==0.3.16.post0"]
whatsapp-twilio = ["twilio>=9.0.0"]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3.0"]
slack = ["slack-bolt>=1.18.0"]
mqtt = ["paho-mqtt>=2.0.0"]
channels = [
    "neonize==0.3.16.post0",
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.0",
    "slack-bolt>=1.18.0",
    "paho-mqtt>=2.0.0",
]
rcan = [
    "zeroconf>=0.131.0",
    "rcan>=3.3,<4",
]
dynamixel = ["dynamixel-sdk>=3.7.31"]
hlabs = ["python-can>=4.0"]  # HLaboratories ACB v2.0 CAN Bus support (pyserial is a core dep)
lerobot = ["feetech-servo-sdk", "dynamixel-sdk>=3.8", "gym-pusht", "gym-aloha"]  # Feetech STS3215 + Dynamixel + gym environments for LeRobot kits
reachy = ["reachy2-sdk>=1.0", "zeroconf>=0.120"]  # Pollen Robotics Reachy 2 / Mini
cloud = [
    "firebase-admin>=6.0.0",
    "httpx>=0.27",
]  # Firebase bridge for remote fleet management (castor bridge)
setup = [
    "qrcode[pil]>=7.0",
]  # Optional: QR code generation for castor setup wizard
esp32 = ["websocket-client>=1.7.0"]
ev3 = ["python-ev3dev2>=2.1.0.post1; sys_platform == 'linux'"]
spike = ["bleak>=0.22.0"]
stem-hardware = [
    "websocket-client>=1.7.0",
    "python-ev3dev2>=2.1.0.post1; sys_platform == 'linux'",
    "bleak>=0.22.0",
]
vertex = ["google-genai>=1.0.0"]
homeassistant = ["aiohttp>=3.9.0"]
webrtc = ["aiortc>=1.6.0", "av>=11.0.0"]
ros2 = []  # rclpy is installed via ROS2 distro, not pip
onnx = ["onnxruntime>=1.17.0"]
onnx-gpu = ["onnxruntime-gpu>=1.17.0"]
gestures = ["mediapipe>=0.10.0"]
apple = [
    # PyPI rejects direct URL dependencies in project metadata.
    # Apple SDK install is handled by setup flow/installer with explicit consent.
]
simulation = []  # Gazebo uses ROS2/rclpy; Webots via REST — no extra pip deps
all = [
    # Keep this installable across supported Python versions.
    # Neonize-based extras (rpi/whatsapp/channels) are intentionally excluded because
    # they conflict with google-generativeai via protobuf constraints.
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.0",
    "slack-bolt>=1.18.0",
    "paho-mqtt>=2.0.0",
    "zeroconf>=0.131.0",
    "dynamixel-sdk>=3.7.31",
    "google-genai>=1.0.0",
    "aiohttp>=3.9.0",
    "aiortc>=1.6.0",
    "av>=11.0.0",
    "onnxruntime>=1.17.0",
    "mediapipe>=0.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "qrcode>=7.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "qrcode>=7.4.0",
    "cyclonedx-bom>=4.0",
    "respx>=0.21",
]

[project.scripts]
castor = "castor.cli:_friendly_error_handler"
opencastor = "castor.cli:_friendly_error_handler"

[project.urls]
Homepage = "https://opencastor.com"
Repository = "https://github.com/craigm26/OpenCastor"
Documentation = "https://docs.opencastor.com"
"Bug Tracker" = "https://github.com/craigm26/OpenCastor/issues"
"Changelog" = "https://github.com/craigm26/OpenCastor/blob/main/CHANGELOG.md"
"Discord" = "https://discord.gg/jMjA8B26Bq"

[tool.setuptools.packages.find]
include = ["castor*"]

[tool.setuptools.package-data]
castor = ["py.typed"]
"castor.harness" = ["*.yaml"]
"castor.profiles" = ["**/*.yaml"]
"castor.profiles.hlabs" = ["*.yaml"]
"castor.profiles.lerobot" = ["*.yaml"]
"castor.profiles.pollen" = ["*.yaml"]
"castor.profiles.arduino" = ["*.yaml"]
"castor.profiles.odrive" = ["*.yaml"]
"castor.profiles.coral" = ["*.yaml"]
"castor.templates" = ["**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (used by FastAPI Depends)
    "UP006",  # use dict instead of Dict (prefer explicit imports for clarity)
    "UP007",  # use X | Y for union types (need 3.10 compat)
    "UP035",  # deprecated typing imports (keep for 3.10 compat)
    "UP045",  # use X | None (keep Optional for 3.10 compat)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
